--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -16,8 +16,9 @@ nav{
     background-color:cornflowerblue;
 }
 .card{
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
+    display: flex;
 
 }
 
